--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>关于我 - Hanlin Zhao</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style-aboutme.css">
 </head>
 <body>
     <header>
