--- a/README.html
+++ b/README.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
@@ -8,10 +9,6 @@
 </head>
 <body>
     <header>
-        <div class="profile">
-            <img src="hanlin_black_white.jpg" alt="Hanlin Zhao" class="profile-photo">
-            <h1 class="name">赵翰林</h1>
-        </div>
         <nav>
             <ul>
                 <li><a href="index.html">首页</a></li>
@@ -21,6 +18,10 @@
                 <li><a href="contact.html">联系</a></li>
             </ul>
         </nav>
+        <div class="profile">
+            <img src="hanlin_black_white.jpg" alt="Hanlin Zhao" class="profile-photo">
+            <h1 class="name">赵翰林</h1>
+        </div>
     </header>
     <main>
         <section class="intro">
