--- a/index.html
+++ b/index.html
@@ -8,29 +8,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <div class="top-bar">
-            <img src="logo.png" alt="Logo" class="logo">
-            <nav>
-                <ul>
-                    <li><a href="index.html">首页</a></li>
-                    <li><a href="about.html">关于我</a></li>
-                    <li><a href="projects.html">项目</a></li>
-                    <li><a href="life-hobbies.html">生活与兴趣</a></li>
-                    <li><a href="contact.html">联系</a></li>
-                </ul>
-            </nav>
-        </div>
+
+    <!-- 顶部导航 -->
+    <header class="top-bar">
+        <img src="logo.png" alt="Logo" class="logo">
+        <nav>
+            <ul>
+                <li><a href="index.html">首页</a></li>
+                <li><a href="about.html">关于我</a></li>
+                <li><a href="projects.html">项目</a></li>
+                <li><a href="life-hobbies.html">生活与兴趣</a></li>
+                <li><a href="contact.html">联系</a></li>
+            </ul>
+        </nav>
     </header>
 
+    <!-- 大背景图 -->
     <section class="hero">
-        <img src="An.png" alt="Hanlin Zhao" class="hero-photo">
-        <h1 class="hero-text">赵翰林</h1>
+        <h1 class="site-title">HANLIN ZHAO</h1>
+        <h2 class="subtitle">探索数据之美，感受生活之诗。</h2>
     </section>
 
     <main>
         <section class="intro">
-            <h2>「探索数据之美，感受生活之诗。」</h2>
             <p>数据分析师 | 设计师 | 诗人 | 登山者</p>
         </section>
         <section class="quote">
@@ -60,5 +60,6 @@
         }
         setInterval(changeQuote, 5000);
     </script>
+
 </body>
 </html>
