--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
     <div class="logo">
-        <img src="llogo.png" alt="Logo">
+        <img src="logo.png" alt="Logo">
     </div>
     <nav>
         <ul>
