--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hanlin Zhao - 个人网站</title>
+    <title>Hanlin Zhao - Personal Web</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -14,23 +14,23 @@
     </div>
     <nav>
         <ul>
-            <li><a href="index.html">首页</a></li>
-            <li><a href="about.html">关于我</a></li>
-            <li><a href="projects.html">项目</a></li>
-            <li><a href="life-hobbies.html">生活与兴趣</a></li>
-            <li><a href="contact.html">联系</a></li>
+            <li><a href="index.html">HELLO</a></li>
+            <li><a href="about.html">ABOUT ME</a></li>
+            <li><a href="projects.html">PROGRAMS</a></li>
+            <li><a href="life-hobbies.html">LIFE & HOBBIES</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
         </ul>
     </nav>
 </header>
 
     <div class="hero">
         <h1>HANLIN ZHAO</h1>
-        <p>探索数据之美，感受生活之诗。</p>
+        <p>Hi, many HRs are interested in other's websites. So, I made one.</p>
     </div>
 
     <section class="intro">
-        <p>数据分析师 | 设计师 | 诗人 | 登山者</p>
-        <p id="dynamic-quote">人生如登山，每一步都是风景。</p>
+        <p>Analyst | Designer | Poet | Hiker</p>
+        <p id="dynamic-quote">Create, Adapt, Excel.</p>
     </section>
 
     <footer>
@@ -39,10 +39,10 @@
 
     <script>
         const quotes = [
-            "人生如登山，每一步都是风景。",
-            "数据是冰冷的，洞察才有温度。",
-            "越过险峰，才能见到最美的日出。",
-            "代码如诗，简洁才是美。"
+            "Dare to explore, strive to lead.",
+            "Logic meets creativity.",
+            "Chase growth, embrace change.",
+            "Redefining limits, unlocking potential."
         ];
         function changeQuote() {
             const quoteElement = document.getElementById("dynamic-quote");
