--- a/about.html
+++ b/about.html
@@ -8,9 +8,26 @@
 </head>
 <body>
     <header>
-        <h1>关于我</h1>
+        <div class="logo">
+            <img src="logo.png" alt="Logo">
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">首页</a></li>
+                <li><a href="about.html" class="active">关于我</a></li>
+                <li><a href="projects.html">项目</a></li>
+                <li><a href="life-hobbies.html">生活与兴趣</a></li>
+                <li><a href="contact.html">联系</a></li>
+            </ul>
+        </nav>
     </header>
+
     <main>
+        <section class="hero">
+            <h1>关于我</h1>
+            <p>探索数据之美，感受生活之诗。</p>
+        </section>
+
         <section class="about-container">
             <div class="card">
                 <h2>我是赵翰林</h2>
@@ -35,6 +52,7 @@
             </div>
         </section>
     </main>
+
     <footer>
         <p>© 2025 Hanlin Zhao. All rights reserved.</p>
     </footer>
