--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>关于我 - Hanlin Zhao</title>
+    <title>ABOUT - Hanlin Zhao</title>
     <link rel="stylesheet" href="style-aboutme.css">
 </head>
 <body>
@@ -13,41 +13,48 @@
         </div>
         <nav>
             <ul>
-                <li><a href="index.html">首页</a></li>
-                <li><a href="about.html" class="active">关于我</a></li>
-                <li><a href="projects.html">项目</a></li>
-                <li><a href="life-hobbies.html">生活与兴趣</a></li>
-                <li><a href="contact.html">联系</a></li>
+                <li><a href="index.html">HELLO</a></li>
+                <li><a href="about.html" class="active">ABOUT</a></li>
+                <li><a href="projects.html">PROGRAMS</a></li>
+                <li><a href="life-hobbies.html">LIFE & HOBBIES</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <section class="hero">
-            <h1>关于我</h1>
-            <p>探索数据之美，感受生活之诗。</p>
+            <h1>ABOUT ME</h1>
+            <p>NICE TO NEET YOU!😊</p>
         </section>
 
         <section class="about-container">
             <div class="card">
                 <h2>我是赵翰林</h2>
-                <p>数据分析师 | 设计师 | 诗人 | 登山者</p>
-                <p>我热爱探索数据的可能性，也热爱用诗意的方式看待世界。</p>
+                <p>Data Analyst | Designer | Poet | Hiker</p>
+                <p>Master of Business Analytics.</p>
+                <p>I am a Tableau Certified Data Analyst and a graduate student in the Master of Business Analytics program at UBC Sauder School of Business, with a strong background in data visualization, financial analysis, and machine learning. My academic journey has equipped me with expertise in tools like Python, SQL, Tableau, Power BI, and AWS, allowing me to turn data into actionable insights.</p>
+                <p>I was a Graphic and 3D Modelling Designer in the 3D Printing Industry.(Photoshop, Adobe Premiere, Rhion, 3D MAX, MAYA, Mimics, SLA 3D Printing, 3D Scanning)</p>
+                <p>Outside of work, I am an experienced hiker, independent musician, and poet, blending creativity and analytical rigor to bring innovative solutions to the table.</p>
             </div>
             
             <div class="timeline">
-                <h2>我的旅程</h2>
+                <h2>My Journey</h2>
                 <div class="timeline-item">
-                    <span class="date">2025</span>
-                    <p>攻读商业分析硕士，专注于数据可视化和商业智能。</p>
+                    <span class="date">2024-2025</span>
+                    <p>Pursuing my master's degree</p>
                 </div>
                 <div class="timeline-item">
-                    <span class="date">2023</span>
-                    <p>在数据分析领域探索，深入学习 Python、SQL、Tableau 等工具。</p>
+                    <span class="date">2024</span>
+                    <p>Corporate Financial Analyst Intern</p>
                 </div>
                 <div class="timeline-item">
-                    <span class="date">2020</span>
-                    <p>作为设计师参与 3D 打印行业，为客户打造定制化解决方案。</p>
+                    <span class="date">2022</span>
+                    <p>People & Culture Analyst Intern</p>
+                </div>
+                <div class="timeline-item">
+                    <span class="date">2020-2024</span>
+                    <p>Pursuing my bachelor's degree in Accounting</p>
                 </div>
             </div>
         </section>
