--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 
         <section class="about-container">
             <div class="card">
-                <h2>我是赵翰林</h2>
+                <h2>I am Hanlin Zhao</h2>
                 <p>Data Analyst | Designer | Poet | Hiker</p>
                 <p>Master of Business Analytics.</p>
                 <p>I am a Tableau Certified Data Analyst and a graduate student in the Master of Business Analytics program at UBC Sauder School of Business, with a strong background in data visualization, financial analysis, and machine learning. My academic journey has equipped me with expertise in tools like Python, SQL, Tableau, Power BI, and AWS, allowing me to turn data into actionable insights.</p>
