--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 
         <section class="about-container">
             <div class="card">
-                <h2>I am Hanlin Zhao</h2>
+                <h2>I am Hanlin Zhao👋</h2>
                 <p>Data Analyst | Designer | Poet | Hiker</p>
                 <p>Master of Business Analytics.</p>
                 <p>I am a Tableau Certified Data Analyst and a graduate student in the Master of Business Analytics program at UBC Sauder School of Business, with a strong background in data visualization, financial analysis, and machine learning. My academic journey has equipped me with expertise in tools like Python, SQL, Tableau, Power BI, and AWS, allowing me to turn data into actionable insights.</p>
@@ -41,19 +41,19 @@
             <div class="timeline">
                 <h2>My Journey</h2>
                 <div class="timeline-item">
-                    <span class="date">2024-2025</span>
+                    <span class="date">2024-2025🎓</span>
                     <p>Pursuing my master's degree</p>
                 </div>
                 <div class="timeline-item">
-                    <span class="date">2024</span>
+                    <span class="date">2024💼</span>
                     <p>Corporate Financial Analyst Intern</p>
                 </div>
                 <div class="timeline-item">
-                    <span class="date">2022</span>
+                    <span class="date">2022💼</span>
                     <p>People & Culture Analyst Intern</p>
                 </div>
                 <div class="timeline-item">
-                    <span class="date">2020-2024</span>
+                    <span class="date">2020-2024🎓</span>
                     <p>Pursuing my bachelor's degree in Accounting</p>
                 </div>
             </div>
