--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div class="hero">
         <h1>HANLIN ZHAO</h1>
-        <p>Hi, many HRs are interested in other's websites. So, I made one.</p>
+        <p>Hi👋, many HRs are interested in other's websites. So, I made one.</p>
     </div>
 
     <section class="intro">
