--- a/program.html
+++ b/program.html
@@ -3,54 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Program - Hanlin Zhao</title>
+    <title>我的项目经历 - Hanlin Zhao</title>
     <link rel="stylesheet" href="style-program.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">首页</a></li>
-                <li><a href="about.html">关于我</a></li>
-                <li><a href="program.html">项目</a></li>
-                <li><a href="life-hobbies.html">生活与兴趣</a></li>
-                <li><a href="contact.html">联系</a></li>
-            </ul>
-        </nav>
-    </header>
 
-    <main>
-        <h1 class="section-title">我的项目经历</h1>
-        <div class="program-container">
-            <div class="program-card">
-                <img src="hackathon.jpg" alt="Hackathon">
-                <div class="program-info">
-                    <h2>PwC Climate Innovation Hackathon</h2>
-                    <p>探索气候金融，项目融资 & 碳市场</p>
-                </div>
-            </div>
-
-            <div class="program-card">
-                <img src="internship.jpg" alt="Internship">
-                <div class="program-info">
-                    <h2>数据分析实习</h2>
-                    <p>利用 SQL & Python 进行商业分析</p>
-                </div>
-            </div>
-
-            <div class="program-card">
-                <img src="research.jpg" alt="Research">
-                <div class="program-info">
-                    <h2>数据可视化研究</h2>
-                    <p>探索数据可视化在商业中的应用</p>
-                </div>
-            </div>
-
+    <nav>
+        <div class="logo">
+            <img src="logo.png" alt="Logo">
         </div>
-    </main>
+        <ul>
+            <li><a href="index.html">首页</a></li>
+            <li><a href="about.html">关于我</a></li>
+            <li><a href="projects.html">项目</a></li>
+            <li><a href="program.html">项目经历</a></li>
+            <li><a href="contact.html">联系</a></li>
+        </ul>
+    </nav>
+
+    <section class="programs">
+        <h2>我的项目经历</h2>
+        <div class="timeline">
+            <div class="timeline-item">
+                <img src="hackathon.jpg" alt="Hackathon">
+                <div class="content">
+                    <h3>黑客马拉松</h3>
+                    <p>探索飞跃式创新，使用前沿技术进行数据驱动决策。</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <img src="internship.jpg" alt="Internship">
+                <div class="content">
+                    <h3>商业分析实习</h3>
+                    <p>利用 SQL 和 Python 进行商业分析和数据可视化。</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <img src="research.jpg" alt="Research">
+                <div class="content">
+                    <h3>学术研究</h3>
+                    <p>探索数据科学优化在商业中的应用。</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <footer>
         <p>© 2025 Hanlin Zhao. All rights reserved.</p>
     </footer>
+
 </body>
 </html>
