--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Hanlin Zhao - Personal Web</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <header>
