--- a/program.html
+++ b/program.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>我的项目经历 - Hanlin Zhao</title>
     <link rel="stylesheet" href="style-program.css">
+    <script src="script.js" defer></script>  <!-- ✅ 确保引用 JavaScript -->
 </head>
 <body>
 
