--- a/program.html
+++ b/program.html
@@ -3,55 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的项目经历 - Hanlin Zhao</title>
-    <link rel="stylesheet" href="style-program.css">
-    <script src="script.js" defer></script>  <!-- ✅ 确保引用 JavaScript -->
+    <title>项目经历 - Hanlin Zhao</title>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">首页</a></li>
+                <li><a href="about.html">关于我</a></li>
+                <li><a href="projects.html">项目</a></li>
+                <li><a href="life-hobbies.html">生活与兴趣</a></li>
+                <li><a href="contact.html">联系</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <nav>
-        <div class="logo">
-            <img src="logo.png" alt="Logo">
-        </div>
-        <ul>
-            <li><a href="index.html">首页</a></li>
-            <li><a href="about.html">关于我</a></li>
-            <li><a href="projects.html">项目</a></li>
-            <li><a href="program.html">项目经历</a></li>
-            <li><a href="contact.html">联系</a></li>
-        </ul>
-    </nav>
-
-    <section class="programs">
-        <h2>我的项目经历</h2>
-        <div class="timeline">
-            <div class="timeline-item">
-                <img src="hackathon.jpg" alt="Hackathon">
-                <div class="content">
-                    <h3>黑客马拉松</h3>
-                    <p>探索飞跃式创新，使用前沿技术进行数据驱动决策。</p>
+    <main>
+        <section class="program-container">
+            <h2 class="section-title">我的项目经历</h2>
+            <div class="timeline">
+                <div class="timeline-item">
+                    <img src="hackathon.jpg" alt="Hackathon" class="timeline-image">
+                    <div class="timeline-content">
+                        <h3>黑客马拉松</h3>
+                        <p>我在比赛中获胜，使用数据优化关键决策并提高效率。</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <img src="internship.jpg" alt="Internship" class="timeline-image">
+                    <div class="timeline-content">
+                        <h3>商业分析实习</h3>
+                        <p>利用 SQL 和 Python 进行商业分析和数据可视化。</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <img src="research.jpg" alt="Research" class="timeline-image">
+                    <div class="timeline-content">
+                        <h3>学术研究</h3>
+                        <p>探索数据科学在优化工作流程中的应用。</p>
+                    </div>
                 </div>
             </div>
-            <div class="timeline-item">
-                <img src="internship.jpg" alt="Internship">
-                <div class="content">
-                    <h3>商业分析实习</h3>
-                    <p>利用 SQL 和 Python 进行商业分析和数据可视化。</p>
-                </div>
-            </div>
-            <div class="timeline-item">
-                <img src="research.jpg" alt="Research">
-                <div class="content">
-                    <h3>学术研究</h3>
-                    <p>探索数据科学优化在商业中的应用。</p>
-                </div>
-            </div>
-        </div>
-    </section>
+        </section>
+    </main>
 
     <footer>
         <p>© 2025 Hanlin Zhao. All rights reserved.</p>
     </footer>
-
 </body>
 </html>
