--- a/program.html
+++ b/program.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="index.html">首页</a></li>
                 <li><a href="about.html">关于我</a></li>
-                <li><a href="projects.html">项目</a></li>
+                <li><a href="program.html">项目</a></li>
                 <li><a href="life-hobbies.html">生活与兴趣</a></li>
                 <li><a href="contact.html">联系</a></li>
             </ul>
