--- a/program.html
+++ b/program.html
@@ -26,14 +26,14 @@
             <h2 class="section-title">我的项目经历</h2>
             <div class="timeline">
                 <div class="timeline-item">
-                    <img src="hackathon.jpg" alt="Hackathon" class="timeline-image">
+                    <img src="Lhack.png" alt="Hackathon" class="timeline-image">
                     <div class="timeline-content">
                         <h3>黑客马拉松</h3>
                         <p>我在比赛中获胜，使用数据优化关键决策并提高效率。</p>
                     </div>
                 </div>
                 <div class="timeline-item">
-                    <img src="internship.jpg" alt="Internship" class="timeline-image">
+                    <img src="Chack.png" alt="Internship" class="timeline-image">
                     <div class="timeline-content">
                         <h3>商业分析实习</h3>
                         <p>利用 SQL 和 Python 进行商业分析和数据可视化。</p>
