--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="index.html">HELLO</a></li>
                 <li><a href="about.html" class="active">ABOUT</a></li>
-                <li><a href="projects.html">PROGRAMS</a></li>
+                <li><a href="program.html">PROGRAMS</a></li>
                 <li><a href="life-hobbies.html">LIFE & HOBBIES</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
