--- a/program.html
+++ b/program.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>项目经历 - Hanlin Zhao</title>
+    <title>Programs - Hanlin Zhao</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style-program.css">
     <script src="script.js" defer></script>
@@ -12,31 +12,37 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">首页</a></li>
-                <li><a href="about.html">关于我</a></li>
-                <li><a href="program.html">项目</a></li>
-                <li><a href="life-hobbies.html">生活与兴趣</a></li>
-                <li><a href="contact.html">联系</a></li>
+                <li><a href="index.html">HELLO</a></li>
+                <li><a href="about.html">ABOUT ME</a></li>
+                <li><a href="program.html">PROGRAMS</a></li>
+                <li><a href="life-hobbies.html">LIFE & HOBBIES</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <section class="program-container">
-            <h2 class="section-title">我的项目经历</h2>
+            <h2 class="section-title">MY PROGRAMS</h2>
             <div class="timeline">
                 <div class="timeline-item">
-                    <img src="Lhack.png" alt="Hackathon" class="timeline-image">
+                    <img src="Chack.png" alt="Hackathon" class="timeline-image">
                     <div class="timeline-content">
-                        <h3>黑客马拉松</h3>
-                        <p>我在比赛中获胜，使用数据优化关键决策并提高效率。</p>
+                        <h3>UBC Climate Innovation Challenge Hackathon - 2025</h3>
+                        <p>Over two days, I worked with an incredible team to tackle a real-world project finance challenge—structuring the financing strategy for Deep Sky, a large-scale Direct Air Capture (DAC) facility in Québec.</p>
+                        <p>✔️ Climate Finance & Offtake Agreements – Explored sustainability-linked bonds, debt structuring, and revenue stability.</p>
+                        <p>✔️ Carbon Markets & Risk Management – Assessed the feasibility of carbon credit pricing, voluntary/compliance markets, and offtake strategies.</p>
+                        <p>✔️ Financial Modeling & Investment Structuring – Evaluated project bankability, DSCR, and equity/debt allocation to optimize returns.</p>
+                        <p>This experience deepened my understanding of sustainable finance, project structuring, and carbon markets, reinforcing the role of finance in accelerating climate innovation. Grateful for the insights from industry experts and my teammates!</p>
                     </div>
                 </div>
                 <div class="timeline-item">
-                    <img src="Chack.png" alt="Internship" class="timeline-image">
+                    <img src="Lhack.png" alt="Internship" class="timeline-image">
                     <div class="timeline-content">
-                        <h3>商业分析实习</h3>
-                        <p>利用 SQL 和 Python 进行商业分析和数据可视化。</p>
+                        <h3>Learning Analytics Hackathon - 2024</h3>
+                        <p>During the recent Learning Analytics Hackathon, I participated as part of Team HAX, where we won the "Most Relevant to Teaching and Learning" award. Our project aimed to promote meaningful discussions aligned with learning outcomes while reducing the number of disengaged or "spam" posts in online learning environments. We proposed dashboards for both instructors and students to track engagement and ensure that discussions contributed to the intended learning objectives.
+</p>
+                        <p>Throughout the process, I applied various technical skills, including Python, Tableau, data analysis, and web design, which were instrumental in creating the dashboards and analyzing data to provide actionable insights. These combined efforts led to a solution that enhanced the overall learning experience and contributed to our success in the competition.</p>
                     </div>
                 </div>
                 <div class="timeline-item">
