--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">HELLO</a></li>
-                <li><a href="about.html" class="active">ABOUT</a></li>
+                <li><a href="about.html" class="active">ABOUT ME</a></li>
                 <li><a href="program.html">PROGRAMS</a></li>
                 <li><a href="life-hobbies.html">LIFE & HOBBIES</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
