--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav>
         <ul>
             <li><a href="index.html">HELLO</a></li>
-            <li><a href="about.html">ABOUT ME</a></li>
+            <li><a href="about.html">PROFILE</a></li>
             <li><a href="program.html">PROGRAMS</a></li>
             <li><a href="life-hobbies.html">LIFE & HOBBIES</a></li>
             <li><a href="contact.html">CONTACT</a></li>
