--- a/life-hobbies.html
+++ b/life-hobbies.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>生活与兴趣 - Hanlin Zhao</title>
+    <title>lifeandhobbies - Hanlin Zhao</title>
     <link rel="stylesheet" href="style-life-hobbies.css">
 </head>
 <body>
@@ -11,46 +11,47 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">首页</a></li>
-                <li><a href="about.html">关于我</a></li>
-                <li><a href="program.html">项目</a></li>
-                <li><a href="life-hobbies.html">生活与兴趣</a></li>
-                <li><a href="contact.html">联系</a></li>
+                <li><a href="index.html">HELLO</a></li>
+                <li><a href="about.html">PROFILE</a></li>
+                <li><a href="program.html">PROGRAMS</a></li>
+                <li><a href="life-hobbies.html">LIFT & HOBBIES</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
     </header>
 
     <!-- 全屏背景 -->
     <section class="hero">
-        <h1>探索生活，发现兴趣</h1>
+        <h1>Live simply, breathe deeply.</h1>
     </section>
 
     <main>
-        <h2 class="section-title">我的兴趣爱好</h2>
+        <h2 class="section-title">Hobbies</h2>
 
         <div class="hobby-timeline">
 
             <div class="hobby-item">
-                <img src="hiking.jpg" alt="登山">
+                <img src="AB1.jpg" alt="Hiking">
+                <img src="AB2.jpg" alt="Hiking">
                 <div class="hobby-content">
-                    <h3>🏔 登山探险</h3>
-                    <p>挑战极限，感受大自然的震撼。我曾徒步至 4400 米高峰。</p>
+                    <h3>🏔 Hiking & Exploring</h3>
+                    <p>Mountains stand, waters run.</p>
                 </div>
             </div>
 
             <div class="hobby-item">
-                <img src="travel.jpg" alt="旅行">
+                <img src="R.png" alt="Road Trip">
                 <div class="hobby-content">
-                    <h3>🌍 自驾与旅行</h3>
-                    <p>驾驶穿越风景，探索世界每个角落。</p>
+                    <h3>🌍 Road Trip 🚗</h3>
+                    <p>Wander where the wind blows.</p>
                 </div>
             </div>
 
             <div class="hobby-item">
-                <img src="guitar.jpg" alt="吉他">
+                <img src="M.png" alt="Musician">
                 <div class="hobby-content">
-                    <h3>🎸 弹吉他</h3>
-                    <p>音乐是一种自由的表达，我喜欢用吉他弹奏旋律。</p>
+                    <h3>🎸 Writing Music</h3>
+                    <p>Life’s a song, sing it loud.</p>
                 </div>
             </div>
 
