--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>联系我 - Hanlin Zhao</title>
+    <title>contact - Hanlin Zhao</title>
     <link rel="stylesheet" href="style-contact.css">
     <script src="script.js" defer></script>
 </head>
@@ -11,39 +11,36 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">首页</a></li>
-                <li><a href="about.html">关于我</a></li>
-                <li><a href="projects.html">项目</a></li>
-                <li><a href="life-hobbies.html">生活与兴趣</a></li>
-                <li><a href="contact.html" class="active">联系</a></li>
+                <li><a href="index.html">HELLO</a></li>
+                <li><a href="about.html">PROFILE</a></li>
+                <li><a href="projects.html">PROGRAMS</a></li>
+                <li><a href="life-hobbies.html">LIFT & HOBBIES</a></li>
+                <li><a href="contact.html" class="active">CONTACT</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <section class="contact-hero">
-            <h1>联系我</h1>
-            <p>欢迎与我交流 📬</p>
+            <h1>CONTACT ME</h1>
+            <p>Welcome to a talk📬</p>
         </section>
 
         <section class="contact-info">
             <div class="contact-item">
-                <img src="wechat.png" alt="WeChat">
-                <h2>微信</h2>
-                <p>扫描二维码添加我</p>
-                <img src="wechat-qr.png" alt="WeChat QR Code" class="qr-code">
-            </div>
-
-            <div class="contact-item">
-                <img src="phone.png" alt="Phone">
-                <h2>电话</h2>
-                <p><a href="tel:+861234567890">+86 123-4567-890</a></p>
-            </div>
-
-            <div class="contact-item">
                 <img src="linkedin.png" alt="LinkedIn">
                 <h2>LinkedIn</h2>
-                <p><a href="https://www.linkedin.com/in/hanlinzhao" target="_blank">查看我的 LinkedIn</a></p>
+                <p><a href="https://www.linkedin.com/in/hanlinzhao/" target="_blank">Open MY LinkedIn</a></p>
+            </div>
+            
+            <div class="contact-item">
+                <h2>Email</h2>
+                <p><a href="https://zhl11111@student.ubc.ca" target="_blank">Email Me</a></p>
+            </div>
+            <div class="contact-item">
+                <img src="wechat.png" alt="WeChat">
+                <h2>WeChat</h2>
+                <img src="wechatqr.png" alt="WeChat QR Code" class="qr-code">
             </div>
         </section>
     </main>
