--- a/contact.html
+++ b/contact.html
@@ -23,20 +23,21 @@
     <main>
         <section class="contact-hero">
             <h1>CONTACT ME</h1>
-            <p>Welcome to a talk📬</p>
+            <p>Welcome to talk📬</p>
         </section>
 
         <section class="contact-info">
+             <div class="contact-item">
+                <h2>Email</h2>
+                <p><a href="https://zhl11111@student.ubc.ca" target="_blank">Email Me</a></p>
+            </div>
+            
             <div class="contact-item">
                 <img src="linkedin.png" alt="LinkedIn">
                 <h2>LinkedIn</h2>
                 <p><a href="https://www.linkedin.com/in/hanlinzhao/" target="_blank">Open MY LinkedIn</a></p>
             </div>
             
-            <div class="contact-item">
-                <h2>Email</h2>
-                <p><a href="https://zhl11111@student.ubc.ca" target="_blank">Email Me</a></p>
-            </div>
             <div class="contact-item">
                 <img src="wechat.png" alt="WeChat">
                 <h2>WeChat</h2>
