--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
         <section class="contact-info">
              <div class="contact-item">
                 <h2>Email</h2>
-                <p><a href="https://zhl11111@student.ubc.ca" target="_blank">Email Me</a></p>
+                <p><a href="https://mail.google.com/mail/u/0/#inbox" target="_blank">zhl11111@student.ubc.ca</a></p>
             </div>
             
             <div class="contact-item">
