--- a/life-hobbies.html
+++ b/life-hobbies.html
@@ -31,7 +31,7 @@
         <div class="hobby-timeline">
 
             <div class="hobby-item">
-                <img src="AB2.png" alt="Hiking">
+                <img src="A2.png" alt="Hiking">
                 <div class="hobby-content">
                     <h3>🏔 Hiking & Exploring</h3>
                     <p>Mountains stand, waters run.</p>
