--- a/life-hobbies.html
+++ b/life-hobbies.html
@@ -22,7 +22,7 @@
 
     <!-- 全屏背景 -->
     <section class="hero">
-        <h1>Live simply, breathe deeply.</h1>
+        <h1>Live Simply, Breathe Deeply.</h1>
     </section>
 
     <main>
