--- a/contact.html
+++ b/contact.html
@@ -29,13 +29,13 @@
         <section class="contact-info">
              <div class="contact-item">
                 <h2>Email</h2>
-                <p><a href="https://mail.google.com/mail/u/0/#inbox" target="_blank">zhl11111@student.ubc.ca</a></p>
+                <p><a href="" target="_blank">zhl11111@student.ubc.ca</a></p>
             </div>
             
             <div class="contact-item">
                 <img src="linkedin.png" alt="LinkedIn">
                 <h2>LinkedIn</h2>
-                <p><a href="https://www.linkedin.com/in/hanlinzhao/" target="_blank">Open MY LinkedIn</a></p>
+                <p><a href="https://www.linkedin.com/in/hanlinzhao/" target="_blank">Open My LinkedIn</a></p>
             </div>
             
             <div class="contact-item">
