--- a/program.html
+++ b/program.html
@@ -48,8 +48,8 @@
                 <div class="timeline-item">
                     <img src="research.jpg" alt="Research" class="timeline-image">
                     <div class="timeline-content">
-                        <h3>学术研究</h3>
-                        <p>探索数据科学在优化工作流程中的应用。</p>
+                        <h3>UBC Sauder Hackathon with Google Cloud Tools - 2025</h3>
+                        <p>2025</p>
                     </div>
                 </div>
             </div>
