--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
                 <li><a href="index.html">HELLO</a></li>
                 <li><a href="about.html">PROFILE</a></li>
                 <li><a href="program.html">PROGRAMS</a></li>
-                <li><a href="life-hobbies.html">LIFT & HOBBIES</a></li>
+                <li><a href="life-hobbies.html">LIFE & HOBBIES</a></li>
                 <li><a href="contact.html" class="active">CONTACT</a></li>
             </ul>
         </nav>
