--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     <main>
         <section class="hero">
             <h1>ABOUT ME</h1>
-            <p>NICE TO NEET YOU!😊</p>
+            <p>NICE TO MEET YOU!😊</p>
         </section>
 
         <section class="about-container">
