--- a/life-hobbies.html
+++ b/life-hobbies.html
@@ -35,6 +35,7 @@
                 <div class="hobby-content">
                     <h3>🏔 Hiking & Exploring</h3>
                     <p>Mountains stand, waters run.</p>
+                    <p>In 2024 I climbed Abuji Tso in Yunnan, China, at an altitude of 4,400 metres. This was my second high altitude trek. In the future, I will continue to challenge myself and my next goal is Haba Snow Mountain at 5300 metres.</p>
                 </div>
             </div>
 
@@ -43,6 +44,7 @@
                 <div class="hobby-content">
                     <h3>🌍 Road Trip 🚗</h3>
                     <p>Wander where the wind blows.</p>
+                    <p>In 2024, my total road trip mileage was about 15,000 kilometres. I travelled the west coast of the US (Vancouver-San Francisco-Los Angeles-San Diego-Las Vegas-Vancouver). In addition, I drove about 4,000 kilometres in Yunnan, China in order to taste different Pu'er teas. I have some other short trips (within 1000km). in 2025, my goal is to drive to Tuktoyaktuk in the north of Canada, in the middle of the Arctic Circle. I also plan to drive the middle of the USA.</p>
                 </div>
             </div>
 
@@ -51,22 +53,25 @@
                 <div class="hobby-content">
                     <h3>🎸 Writing Music</h3>
                     <p>Life’s a song, sing it loud.</p>
+                    <p>I'm the guitarist in the band and I've written a lot of songs. But I'm very busy right now and I'm writing very slowly. I can sing for you to listen.</p>
                 </div>
             </div>
 
             <div class="hobby-item">
                 <img src="archery.jpg" alt="射箭">
                 <div class="hobby-content">
-                    <h3>🏹 射箭</h3>
-                    <p>专注、精准，每一箭都是对自己的挑战。</p>
+                    <h3>✏️ Writing Poem </h3>
+                    <p>Writing to save myself.</p>
+                    <p>I have written more than a dozen poems, and I am best at writing FIVE CHARACTER QUATRAINS. my favourite poet is Bai Juyi, and you can talk to me about writing poems, or Shengtang poets.</p>
                 </div>
             </div>
 
             <div class="hobby-item">
                 <img src="reading.jpg" alt="阅读">
                 <div class="hobby-content">
-                    <h3>📚 阅读</h3>
-                    <p>在书籍的世界里探索无限可能，增长见识。</p>
+                    <h3>🔫 10 Metre Air Rifle </h3>
+                    <p>Dream big, start small.</p>
+                    <p>On weekends I practice 10m air rifle and competitive recurve bow, and I'm very good at shooting sports (or at least the best among my friends). But I recently injured my shoulder and I need a break.</p>
                 </div>
             </div>
 
