--- a/life-hobbies.html
+++ b/life-hobbies.html
@@ -58,7 +58,7 @@
             </div>
 
             <div class="hobby-item">
-                <img src="archery.jpg" alt="射箭">
+                <img src="wirte.png" alt="Poem">
                 <div class="hobby-content">
                     <h3>✏️ Writing Poem </h3>
                     <p>Writing to save myself.</p>
@@ -67,11 +67,19 @@
             </div>
 
             <div class="hobby-item">
-                <img src="reading.jpg" alt="阅读">
+                <img src="shoot.png" alt="Air Rifle Shooting">
                 <div class="hobby-content">
                     <h3>🔫 10 Metre Air Rifle </h3>
                     <p>Dream big, start small.</p>
                     <p>On weekends I practice 10m air rifle and competitive recurve bow, and I'm very good at shooting sports (or at least the best among my friends). But I recently injured my shoulder and I need a break.</p>
+                </div>
+
+            <div class="hobby-item">
+                <img src="offroad.png" alt="off-road">
+                <div class="hobby-content">
+                    <h3>🚙 Off-Road </h3>
+                    <p>Grip and go.</p>
+                    <p>Normally I go up to the mountains for off-roading, and the place I go to most often is Stave-lake on the east side of Vancouver, which is one of the most popular off-roading spots in Vancouver in the spring or winter.</p>
                 </div>
             </div>
 
