--- a/life-hobbies.html
+++ b/life-hobbies.html
@@ -73,6 +73,7 @@
                     <p>Dream big, start small.</p>
                     <p>On weekends I practice 10m air rifle and competitive recurve bow, and I'm very good at shooting sports (or at least the best among my friends). But I recently injured my shoulder and I need a break.</p>
                 </div>
+            </div>
 
             <div class="hobby-item">
                 <img src="offroad.png" alt="off-road">
