--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,18 @@
                 <img src="wechatqr.png" alt="WeChat QR Code" class="qr-code">
             </div>
         </section>
+
+        <section class ="comment">
+            <div id="guestbook">
+    <h2>留言板</h2>
+    <form id="message-form">
+        <input type="text" id="name" placeholder="你的名字" required>
+        <textarea id="message" placeholder="留言内容" required></textarea>
+        <button type="submit">提交留言</button>
+    </form>
+    <div id="messages"></div>
+</div>
+        </section>
     </main>
 
     <footer>
