--- a/program.html
+++ b/program.html
@@ -26,6 +26,17 @@
             <h2 class="section-title">MY PROGRAMS</h2>
             <div class="timeline">
                 <div class="timeline-item">
+                    <img src="googlehax.jpg" alt="Research" class="timeline-image">
+                    <div class="timeline-content">
+                        <h3>UBC Sauder and Google Hackathon with Google Cloud Tools - 2025</h3>
+                        <p>We successfully integrated the YouTube Analytics API to retrieve key metrics such as views, subscriber growth, audience distribution, and traffic sources, while resolving OAuth authentication challenges to ensure secure data access. </p>
+                        <p>Since the API only allows access to our own channel data, we leveraged YouTube Data API v3 for public statistics and applied Machine Learning models, including time series forecasting (ARIMA, LSTM), to predict future trends.</p>
+                        <p>Additionally, we integrated Looker Studio to create real-time dashboards for visualizing YouTube performance, enhancing insights through interactive and data-driven reporting. </p>
+                        <p>Moving forward, we aim to refine our ML models, automate data collection, and build an intelligent analytics system that seamlessly combines API data, predictive modeling, and visualization for optimized YouTube growth strategies. </p>
+                        <p>Explore our website and dashboard(You can type anything for username and password): https://jjzhao08200.github.io/Journey-to-the-west/index.html</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
                     <img src="Chack.png" alt="Hackathon" class="timeline-image">
                     <div class="timeline-content">
                         <h3>UBC Climate Innovation Challenge Hackathon - 2025</h3>
@@ -43,13 +54,6 @@
                         <p>During the recent Learning Analytics Hackathon, I participated as part of Team HAX, where we won the "Most Relevant to Teaching and Learning" award. Our project aimed to promote meaningful discussions aligned with learning outcomes while reducing the number of disengaged or "spam" posts in online learning environments. We proposed dashboards for both instructors and students to track engagement and ensure that discussions contributed to the intended learning objectives.
 </p>
                         <p>Throughout the process, I applied various technical skills, including Python, Tableau, data analysis, and web design, which were instrumental in creating the dashboards and analyzing data to provide actionable insights. These combined efforts led to a solution that enhanced the overall learning experience and contributed to our success in the competition.</p>
-                    </div>
-                </div>
-                <div class="timeline-item">
-                    <img src="research.jpg" alt="Research" class="timeline-image">
-                    <div class="timeline-content">
-                        <h3>UBC Sauder Hackathon with Google Cloud Tools - 2025</h3>
-                        <p>2025</p>
                     </div>
                 </div>
             </div>
