--- a/program.html
+++ b/program.html
@@ -33,7 +33,7 @@
                         <p>Since the API only allows access to our own channel data, we leveraged YouTube Data API v3 for public statistics and applied Machine Learning models, including time series forecasting (ARIMA, LSTM), to predict future trends.</p>
                         <p>Additionally, we integrated Looker Studio to create real-time dashboards for visualizing YouTube performance, enhancing insights through interactive and data-driven reporting. </p>
                         <p>Moving forward, we aim to refine our ML models, automate data collection, and build an intelligent analytics system that seamlessly combines API data, predictive modeling, and visualization for optimized YouTube growth strategies. </p>
-                        <p>Explore our website and dashboard(You can type anything for username and password): https://jjzhao08200.github.io/Journey-to-the-west/index.html</p>
+                        <p>Explore our website and dashboard(You can type anything for username and password): <a href="https://jjzhao08200.github.io/Journey-to-the-west/index.html" target="_blank">Click here to visit</a></p>
                     </div>
                 </div>
                 <div class="timeline-item">
