--- a/about.html
+++ b/about.html
@@ -40,21 +40,29 @@
             
             <div class="timeline">
                 <h2>My Journey</h2>
+                 <div class="timeline-item">
+                    <span class="date">2025 July-October🎓</span>
+                    <p>Industry Business Analyst Intern - IAV GmbH Ingenieurgesellschaft Auto und Verkehr</p>
+                </div>
+                <div class="timeline-item">
+                    <span class="date">2025 May-July🎓</span>
+                    <p>Student Industry Project Consultant - Redteam Projects Inc.</p>
+                </div>
                 <div class="timeline-item">
                     <span class="date">2024-2025🎓</span>
-                    <p>Pursuing my master's degree</p>
+                    <p>Pursuing my master's degree - UBC Sauder</p>
                 </div>
                 <div class="timeline-item">
                     <span class="date">2024💼</span>
-                    <p>Corporate Financial Analyst Intern</p>
+                    <p>Corporate Financial Analyst Intern - MMB Ltd.</p>
                 </div>
                 <div class="timeline-item">
                     <span class="date">2022💼</span>
-                    <p>People & Culture Analyst Intern</p>
+                    <p>People & Culture Analyst Intern - Foxhub Tech Ltd.</p>
                 </div>
                 <div class="timeline-item">
                     <span class="date">2020-2024🎓</span>
-                    <p>Pursuing my bachelor's degree in Accounting</p>
+                    <p>Pursuing my bachelor's degree in Accounting - UBC Sauder</p>
                 </div>
             </div>
         </section>
