--- a/about.html
+++ b/about.html
@@ -41,11 +41,11 @@
             <div class="timeline">
                 <h2>My Journey</h2>
                  <div class="timeline-item">
-                    <span class="date">2025 July-October🎓</span>
+                    <span class="date">2025 July-October💼</span>
                     <p>Industry Business Analyst Intern - IAV GmbH Ingenieurgesellschaft Auto und Verkehr</p>
                 </div>
                 <div class="timeline-item">
-                    <span class="date">2025 May-July🎓</span>
+                    <span class="date">2025 May-July💼</span>
                     <p>Student Industry Project Consultant - Redteam Projects Inc.</p>
                 </div>
                 <div class="timeline-item">
