--- a/life-hobbies.html
+++ b/life-hobbies.html
@@ -45,6 +45,7 @@
                     <h3>🌍 Road Trip 🚗</h3>
                     <p>Wander where the wind blows.</p>
                     <p>In 2024, my total road trip mileage was about 15,000 kilometres. I travelled the west coast of the US (Vancouver-San Francisco-Los Angeles-San Diego-Las Vegas-Vancouver). In addition, I drove about 4,000 kilometres in Yunnan, China in order to taste different Pu'er teas. I have some other short trips (within 1000km). in 2025, my goal is to drive to Tuktoyaktuk in the north of Canada, in the middle of the Arctic Circle. I also plan to drive the middle of the USA.</p>
+                    <p>2025 in progress... This year I changed my plan but Tuktoyaktuk is still my dream. It is such a busy year. My graduate program is too busy! In my I went back to west of US from San Francisco to Las Vegas then turn north to Yellowstone National Park. I visited 9 national parks and Salt Lake City. In the next half year. I may have another road trip to be decide.</p>
                 </div>
             </div>
 
@@ -63,6 +64,11 @@
                     <h3>✏️ Writing Poem </h3>
                     <p>Writing to save myself.</p>
                     <p>I have written more than a dozen poems, and I am best at writing FIVE CHARACTER QUATRAINS. my favourite poet is Bai Juyi, and you can talk to me about writing poems, or Shengtang poets.</p>
+                    <p>This year（2025） I write a Chinese Poem when I went to 24 road Utah, US to describe the “space needle” view I saw. I hope you like it.</p>
+                        <p>初为混沌一抔尘，</p>
+                        <p>千劫沧流洗旧痕。</p>
+                        <p>黄沙裂岸穿波涘，</p>
+                        <p>风刀雨刻铸乾坤。</p>
                 </div>
             </div>
 
