Revise personal description and timeline entries
Updated the about section to reflect new skills and experiences.

--- a/about.html
+++ b/about.html
@@ -31,10 +31,10 @@
         <section class="about-container">
             <div class="card">
                 <h2>I am Hanlin Zhao👋</h2>
-                <p>Data Analyst | Designer | Poet | Hiker</p>
+                <p>Data Analyst | 3D Designer | Poet | Hiker</p>
                 <p>Master of Business Analytics.</p>
-                <p>I am a Tableau Certified Data Analyst and a graduate student in the Master of Business Analytics program at UBC Sauder School of Business, with a strong background in data visualization, financial analysis, and machine learning. My academic journey has equipped me with expertise in tools like Python, SQL, Tableau, Power BI, and AWS, allowing me to turn data into actionable insights.</p>
-                <p>I was a Graphic and 3D Modelling Designer in the 3D Printing Industry.(Photoshop, Adobe Premiere, Rhion, 3D MAX, MAYA, Mimics, SLA 3D Printing, 3D Scanning)</p>
+                <p>I am a data analyst with a strong foundation in financial analysis, management accounting, and data-driven decision-making. Backed by formal training in accounting and finance, I am experienced in applying analytics to cost structure analysis, budgeting, forecasting, and performance evaluation. I work extensively with Python, SQL, Tableau, Power BI, and AWS to transform complex financial and operational data into clear, actionable insights for management and strategic planning.</p>
+                <p>Before transitioning into analytics and finance-focused roles, I worked as a Graphic and 3D Modeling Designer in the 3D Printing industry, developing strong visual communication skills using tools such as Photoshop, Adobe Premiere, Rhino, 3D Max, Maya, and Mimics, alongside SLA 3D printing and 3D scanning workflows. This background enables me to combine analytical rigor with compelling visual storytelling.</p>
                 <p>Outside of work, I am an experienced hiker, independent musician, and poet, blending creativity and analytical rigor to bring innovative solutions to the table.</p>
             </div>
             
@@ -46,19 +46,12 @@
                 </div>
                 <div class="timeline-item">
                     <span class="date">2025 May-July💼</span>
-                    <p>Student Industry Project Consultant - Redteam Projects Inc.</p>
+                    <p>Industry Project Consultant Intern - Redteam Projects Inc.</p>
                 </div>
                 <div class="timeline-item">
                     <span class="date">2024-2025🎓</span>
                     <p>Pursuing my master's degree - UBC Sauder</p>
                 </div>
-                <div class="timeline-item">
-                    <span class="date">2024💼</span>
-                    <p>Corporate Financial Analyst Intern - MMB Ltd.</p>
-                </div>
-                <div class="timeline-item">
-                    <span class="date">2022💼</span>
-                    <p>People & Culture Analyst Intern - Foxhub Tech Ltd.</p>
                 </div>
                 <div class="timeline-item">
                     <span class="date">2020-2024🎓</span>
