--- a/life-hobbies.html
+++ b/life-hobbies.html
@@ -45,7 +45,8 @@
                     <h3>🌍 Road Trip 🚗</h3>
                     <p>Wander where the wind blows.</p>
                     <p>In 2024, my total road trip mileage was about 15,000 kilometres. I travelled the west coast of the US (Vancouver-San Francisco-Los Angeles-San Diego-Las Vegas-Vancouver). In addition, I drove about 4,000 kilometres in Yunnan, China in order to taste different Pu'er teas. I have some other short trips (within 1000km). in 2025, my goal is to drive to Tuktoyaktuk in the north of Canada, in the middle of the Arctic Circle. I also plan to drive the middle of the USA.</p>
-                    <p>2025 in progress... This year I changed my plan but Tuktoyaktuk is still my dream. It is such a busy year. My graduate program is too busy! In my I went back to west of US from San Francisco to Las Vegas then turn north to Yellowstone National Park. I visited 9 national parks and Salt Lake City. In the next half year. I may have another road trip to be decide.</p>
+                    <p>2025 end. This year I changed my plan but Tuktoyaktuk is still my dream. It is such a busy year. My graduate program is too busy! In my I went back to west of US from San Francisco to Las Vegas then turn north to Yellowstone National Park. I visited 9 national parks and Salt Lake City. In the next half year. Driving the Tang Poetry Road from Hangzhou to Wenzhou, I found myself inside Li Bai’s line—“天姥连天向天横，势拔五岳掩赤城.” Some landscapes are not meant to be seen, but to be understood.</p>
+                    <p>2026 is in progress...</p>
                 </div>
             </div>
 
@@ -64,7 +65,7 @@
                     <h3>✏️ Writing Poem </h3>
                     <p>Writing to save myself.</p>
                     <p>I have written more than a dozen poems, and I am best at writing FIVE CHARACTER QUATRAINS. my favourite poet is Bai Juyi, and you can talk to me about writing poems, or Shengtang poets.</p>
-                    <p>This year（2025） I write a Chinese Poem when I went to 24 road Utah, US to describe the “space needle” view I saw. I hope you like it.</p>
+                    <p>This year（2025), I wrote a Chinese Poem when I went to 24 road Utah, US to describe the “space needle” view I saw. I hope you like it.</p>
                         <p>初为混沌一抔尘，</p>
                         <p>千劫沧流洗旧痕。</p>
                         <p>黄沙裂岸穿波涘，</p>
@@ -75,18 +76,20 @@
             <div class="hobby-item">
                 <img src="shoot.png" alt="Air Rifle Shooting">
                 <div class="hobby-content">
-                    <h3>🔫 10 Metre Air Rifle </h3>
+                    <h3>🔫 Sports 🎾 </h3>
                     <p>Dream big, start small.</p>
-                    <p>On weekends I practice 10m air rifle and competitive recurve bow, and I'm very good at shooting sports (or at least the best among my friends). But I recently injured my shoulder and I need a break.</p>
+                    <p>On weekends, I practice 10m air rifle and competitive recurve bow, and I'm very good at shooting sports (or at least the best among my friends).</p>
+                    <p>My tennis level has improved this year in the beginning of 2026, and I’m now playing at a 3.0–3.5 level.</p>
                 </div>
             </div>
 
             <div class="hobby-item">
                 <img src="offroad.png" alt="off-road">
                 <div class="hobby-content">
-                    <h3>🚙 Off-Road </h3>
+                    <h3>🚙 Off-Road</h3>
                     <p>Grip and go.</p>
-                    <p>Normally I go up to the mountains for off-roading, and the place I go to most often is Stave-lake on the east side of Vancouver, which is one of the most popular off-roading spots in Vancouver in the spring or winter.</p>
+                    <p>Normally, I go up to the mountains for off-roading, and the place I go to most often is Stave Lake on the east side of Vancouver, which is one of the most popular off-roading spots in Vancouver in the spring or winter.</p>
+                    <p>2026, this year, I sold my off-road vehicle because I graduated and need to go back to China. I am sad.
                 </div>
             </div>
 
