Update email address in about.html

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
         <!-- 可选：你有简历PDF就把 href 改成 resume.pdf -->
         <a class="btn" href="#" onclick="return false;">Download Resume</a>
         <!-- 可选：改成你的邮箱 -->
-        <a class="btn ghost" href="mailto:your.email@example.com">Email Me</a>
+        <a class="btn ghost" href="mailto:hanlinzhaojj@gmail.com">Email Me</a>
       </div>
     </section>
 
